@@ -9,9 +9,7 @@ Uploaders: Barry deFreese <bdefreese@debian.org>,
 Standards-Version: 3.9.4
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1~),
-               nasm [any-i386],
                libasound2-dev [linux-any],
-               libaudiofile-dev,
                libgl1-mesa-dev,
                libglu1-mesa-dev,
                libpulse-dev,
@@ -52,7 +50,6 @@ Architecture: any
 Section: libdevel
 Depends: ${misc:Depends},
          libasound2-dev [linux-any],
-         libaudiofile-dev,
          libgl1-mesa-dev,
          libglu1-mesa-dev,
          libpulse-dev,
