@@ -8,6 +8,7 @@ libsdl2 (2.0.0~rc1-1) UNRELEASED; urgency=low
   * Disable directfb backend for now as it's broken and upstream
     disables it by default.
     - Drop the udeb package.
+  * Drop some unused dependencies and confflags.
 
  -- Felix Geyer <fgeyer@debian.org>  Sat, 01 Jun 2013 10:17:56 +0200
 
